--- a/ini/samd21.ini
+++ b/ini/samd21.ini
@@ -5,22 +5,22 @@
 
 #################################
 #                               #
-#      SAMD51 Architecture      #
+#      SAMD21 Architecture      #
 #                               #
 #################################
 
 #
 # Adafruit Grand Central M4 (Atmel SAMD51P20A ARM Cortex-M4)
 #
-[env:SAMD51_grandcentral_m4]
+[env:SAMD21_minitronics20]
 platform         = atmelsam
-board            = adafruit_grandcentral_m4
+board            = minitronics20
 build_flags      = ${common.build_flags} -std=gnu++17
+                   -DUSBCON -DUSBD_USE_CDC -D__SAMD21__ -DARDUINO_SAMD_MINITRONICS20  -Wno-deprecated-declarations -DDEBUG
+                   -IMarlin/src/HAL/SAMD21/u8g
 build_unflags    = -std=gnu++11
-build_src_filter = ${common.default_src_filter} +<src/HAL/SAMD51>
+build_src_filter = ${common.default_src_filter} +<src/HAL/SAMD21>
 lib_deps         = ${common.lib_deps}
-                   SoftwareSerialM
 extra_scripts    = ${common.extra_scripts}
-                   pre:buildroot/share/PlatformIO/scripts/SAMD51_grandcentral_m4.py
-custom_marlin.HAS_MEDIA = SdFat - Adafruit Fork, Adafruit SPIFlash
-debug_tool       = jlink
+                   pre:buildroot/share/PlatformIO/scripts/SAMD21_minitronics20.py
+debug_tool       = atmel-ice
